--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div>
             <h4 class="footer__title">Служба поддержки</h4>
             <p class="footer__text">Обратная связь</p>
-            <p class="footer__text">Возврат маффинов</p>
+            <p class="footer__text">Возврат</p>
             <p class="footer__text">Отзывы</p>
         </div>
         <div>
@@ -290,4 +290,5 @@
 </body>
 
 </html>
+
 
