--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <!-- Главный Баннер -->
         <div class="hero">
             <div class="hero__content">
-                <h1 class="hero__title">Свежие маффины на любой вкус</h1>
+                <h1 class="hero__title">Свежая пахлава на любой вкус</h1>
                 <p class="hero__subtitle">Мы готовим маленькие сладости, которые приносят большие улыбки в любой день и без повода</p>
                 <button class="button">Подробнее</button>
             </div>
-            <img src="img/Hero.png" alt="Свежие маффины">
+            <img src="img/Hero.png" alt="Свежая пахлава">
         </div>
 
         <main>
@@ -40,42 +40,42 @@
             <h2 class="section-title">Сладости на праздник</h2>
             <div class="grid">
                 <div class="product-card">
-                    <img src="img/Baklava_1.png" alt="Маффины" class="product-card__image">
+                    <img src="img/Baklava_1.png" alt="заказ" class="product-card__image">
                     <div class="product-card__overlay">
                         <h3 class="product-card__title">День рождения</h3>
                         <button class="button">Заказать</button>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/Baklava_2.png" alt="Маффины" class="product-card__image">
+                    <img src="img/Baklava_2.png" alt="заказ" class="product-card__image">
                     <div class="product-card__overlay">
                         <h3 class="product-card__title">Свадьба</h3>
                         <button class="button">Заказать</button>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/Baklava_3.png" alt="Маффины" class="product-card__image">
+                    <img src="img/Baklava_3.png" alt="заказ" class="product-card__image">
                     <div class="product-card__overlay">
                         <h3 class="product-card__title">Праздник 24 апреля 1915 года</h3>
                         <button class="button">Заказать</button>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/Baklava_4.png" alt="Маффины" class="product-card__image">
+                    <img src="img/Baklava_4.png" alt="зака" class="product-card__image">
                     <div class="product-card__overlay">
                         <h3 class="product-card__title">Ураза Байрам</h3>
                         <button class="button">Заказать</button>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/Baklava_5.png" alt="Маффины" class="product-card__image">
+                    <img src="img/Baklava_5.png" alt="заказ" class="product-card__image">
                     <div class="product-card__overlay">
                         <h3 class="product-card__title">Новый год</h3>
                         <button class="button">Заказать</button>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/Baklava_6.png" alt="Маффины" class="product-card__image">
+                    <img src="img/Baklava_6.png" alt="заказ" class="product-card__image">
                     <div class="product-card__overlay">
                         <h3 class="product-card__title">8 марта</h3>
                         <button class="button">Заказать</button>
@@ -87,12 +87,12 @@
             <h2 class="section-title">Почему мы?</h2>
             <div class="features">
                 <div class="feature-item-right">
-                    <img src="img/Logo1.png" alt="С любовью" class="feature-item__icon">
+                    <img src="img/Logo1.png" alt="с 1923" class="feature-item__icon">
                     <p class="feature-item__title">Мы работаем с 1923 года.</p>
                     <p class="feature-item__text">Большой опыт и квалификация специалистов гарантирует безупречное качество заказов</p>
                 </div>
                 <div class="feature-item-center">
-                    <img src="img/Logo2.png" alt="Доставка" class="feature-item__icon">
+                    <img src="img/Logo2.png" alt="Производство" class="feature-item__icon">
                     <p class="feature-item__title">Наше производство находится в Турции.</p>
                     <p class="feature-item__text">Мы упакуем все ваши маффины в коробочки и доставим их целыми и невредимыми</p>
                 </div>
@@ -201,7 +201,7 @@
                             <button class="button">Заказать</button>
                         </form>
                     </div>
-                    <img src="img/Hero_2.png" alt="Маффины" class="order-section__image">
+                    <img src="img/Hero_2.png" alt="херо" class="order-section__image">
                 </div>
             </div>
 
@@ -209,17 +209,17 @@
             <h2 class="section-title">Наш блог</h2>
             <div class="blog-grid">
                 <div class="blog-card">
-                    <img src="img/Baklava_8.png" alt="Шоколадные маффины" class="blog-card__image">
+                    <img src="img/Baklava_8.png" alt="рецепты" class="blog-card__image">
                     <p class="blog-card__title">7 рецептов самой вкусной пахлавы</p>
                     <button class="button button--wide">Читать</button>
                 </div>
                 <div class="blog-card">
-                    <img src="img/Baklava_9.png" alt="Начинки для маффинов" class="blog-card__image">
+                    <img src="img/Baklava_9.png" alt="орехи" class="blog-card__image">
                     <p class="blog-card__title">Лучшая орехи для пахлавы: Как выбрать?</p>
                     <button class="button button--wide">Читать</button>
                 </div>
                 <div class="blog-card">
-                    <img src="img/Baklava_10.png" alt="Крем для маффинов" class="blog-card__image">
+                    <img src="img/Baklava_10.png" alt="фило" class="blog-card__image">
                     <p class="blog-card__title">Как сделать тесто Фило?</p>
                     <button class="button button--wide">Читать</button>
                 </div>
@@ -250,7 +250,7 @@
             <div class="cta-wrapper">
                 <div class="cta-banner">
                     <h3 class="cta-banner__title">Сделай заказ!</h3>
-                    <p class="cta-banner__text">Порадуй себя чем-то вкусненьким. Позвони и закажи маффин прямо сейчас!</p>
+                    <p class="cta-banner__text">Порадуй себя чем-то вкусненьким. Позвони и закажи пахлаву прямо сейчас!</p>
                     <button class="button button--outline">Заказать</button>
                 </div>
             </div>
@@ -290,5 +290,6 @@
 </body>
 
 </html>
+
 
 
