--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="feature-item-center">
                     <img src="img/Logo2.png" alt="Производство" class="feature-item__icon">
                     <p class="feature-item__title">Наше производство находится в Турции.</p>
-                    <p class="feature-item__text">Мы упакуем все ваши маффины в коробочки и доставим их целыми и невредимыми</p>
+                    <p class="feature-item__text">Мы упакуем всю вашу пахлаву в коробочки и доставим их целыми и невредимыми</p>
                 </div>
                 <div class="feature-item-left">
                     <img src="img/Logo3.png" alt="Натуральные продукты" class="feature-item__icon">
@@ -290,6 +290,7 @@
 </body>
 
 </html>
+
 
 
 
